--- a/amigurumi-app/src/app/home/home.component.css
+++ b/amigurumi-app/src/app/home/home.component.css
@@ -3,6 +3,17 @@
     flex: 1;
     padding-bottom: 50px;
     min-height: 75vh;
+    
+  
+    /* opacity: 1;
+    color: rgba(237, 240, 244, 0.2) !important; */
+}
+.row{
+  margin-top: 50px;
+    width: 70%;
+    background-color: rgba(246, 246, 246, 0.8) !important;
+    /* background-color: rgba(244, 155, 228, 0.3) !important; */
+    margin-left: auto;
 }
 .divImage {
     width: 100%;
@@ -25,7 +36,13 @@
 
 
 }
-
+.welcome-info{
+    display: flex;
+    flex-direction: column;
+  
+    text-align:start;
+   
+}
 /* .carousel {
     margin: 20px;
 }
@@ -56,3 +73,4 @@
     font-style: italic;
     list-style: none;
 } */
+
