update not found

--- a/amigurumi-app/src/app/not-found/not-found.component.html
+++ b/amigurumi-app/src/app/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <head>
  
   
@@ -35,4 +35,24 @@
   </div>
 </section>
 
+ -->
 
+
+ <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="page-404">
+    <div class="outer">
+        <div class="middle">
+            <div class="inner">
+                <!--BEGIN CONTENT-->
+                <div class="inner-circle"><i class="fa fa-home"></i><span>404</span></div>
+                <span class="inner-status">Oop's  sorry we can't find that page!</span>
+                <span class="inner-detail">
+                    We can not find the page you're looking for.
+                    <a routerLink="/" class="btn btn-info infoColor"><i class="fa fa-home"></i>&nbsp;
+                        Return home
+                    </a> 
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
