update product-list and details pages

--- a/amigurumi-app/src/app/product-list/product-list.component.html
+++ b/amigurumi-app/src/app/product-list/product-list.component.html
@@ -4,6 +4,14 @@
             <!-- Page title -->
             <div class="my-5">
                 <h3>Amigurumi Catalog:</h3>
+                <nav class=" welcome-info navbar bg-body-tertiary">
+                    <div class="container-fluid">
+                      <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-primary" type="submit">Search</button>
+                      </form>
+                    </div>
+                  </nav>
                 <hr>
             </div>
             <!-- Form START -->
@@ -22,7 +30,9 @@
 
                     <!-- [routerLink]="['product','detail',product.id]"> -->
                     <div class="card" style="width: 18rem;">
-                        <img src="{{product.imageUrl}}" class="card-img-top" alt="product image">
+                        <div class="image-container">
+                            <img src="{{product.imageUrl}}" class="card-img-top" alt="product image">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">{{product.title}}</h5>
 
@@ -41,7 +51,64 @@
                         </div>
                     </div>
 
-                </li>
+
+
+                    <!-- <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
+                integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+
+            <div class="container mt-100 mt-60">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <div class="section-title mb-4 pb-2">
+                            <h4 class="title mb-4">Amigurumi Catalog:</h4>
+                            <p class="text-muted para-desc mx-auto mb-0">Build responsive, mobile-first projects on
+                                the web with the world's most popular front-end component library.</p>
+                        </div>
+                    </div>
+                </div>
+                <ul>
+                    <li *ngFor="let product of products " class="col-lg-4 col-md-6 mt-4 pt-2">
+
+                        <div class="blog-post rounded border">
+                            <div class="blog-img d-block overflow-hidden position-relative">
+                                <img src="{{product.imageUrl}}" class="card-img" alt="">
+                                <div class="overlay rounded-top bg-dark"></div>
+                                <div class="post-meta">
+                                    <a href="javascript:void(0)" class="text-light d-block text-right like"><i
+                                            class="mdi mdi-heart"></i> 33</a>
+                                    <a a [routerLink]="product.id" class="text-light read-more">Read More <i
+                                            class="mdi mdi-chevron-right"></i></a>
+                                </div>
+                            </div>
+                            <div class="content p-3">
+                                <small class="text-muted p float-right">19th Oct, 19</small>
+                                <small><a href="javascript:void(0)" class="text-primary">Marketing</a></small>
+                                <h4 class="mt-2"><a href="javascript:void(0)"
+                                        class="text-dark title">{{product.title}}</a></h4>
+                                <p class="text-muted mt-2">There is now an abundance of readable dummy texts.
+                                    These are usually used when a text is required purely to fill a space.</p>
+                                <button> <a [routerLink]="product.id" class="btn btn-primary"> Details Page</a></button>
+                                <div class="pt-3 mt-3 border-top d-flex">
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                                        class="img-fluid avatar avatar-ex-sm rounded-pill mr-3 shadow" alt="">
+                                    <div class="author mt-2">
+                                        <h6 class="mb-0"><a href="javascript:void(0)"
+                                                class="text-dark name">{{product.author}}</a></h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+
+
+                    </li>
+
+                </ul>
+            </div> -->
+
+
+
             </ul>
         </div>
     </div>
