--- a/amigurumi-app/src/app/product-list/product-list.component.css
+++ b/amigurumi-app/src/app/product-list/product-list.component.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 
@@ -9,9 +8,14 @@ ul {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 20px;
+    gap: 0.8em
+        /* padding-top: 20px; */
 }
+
 li {
+    list-style-type: none;
+
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,10 +31,12 @@ li {
     text-align: center;
     margin-bottom: 20px;
     margin-right: 15px;
-    background: #5758BB;
-    /* background: #ADADE8; */
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+
+    background-color: rgba(87, 88, 187, 0.8) !important;
+    /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    background: #ADADE8; */
 }
+
 
 li:hover {
 
@@ -40,32 +46,39 @@ li:hover {
 }
 
 img {
+
+    margin-top: 20px;
+    margin-bottom: 10px;
+    /* transform: opacity 0.3s ease-in; */
     width: 250px;
     height: 250px;
-    /* margin-top: 20px;
-    margin-bottom: 10px; */
-    margin:20px auto;
+    margin: 20px auto;
     border-radius: .25rem;
-    border: 1px solid rgb(248, 248, 248);
+    border: 1px ;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    opacity: 0.5;
-    /* transform: opacity 0.3s ease-in; */
+    opacity: 0.8;
+
+
 }
 
 img:hover {
-    /* transform: scale(1.04); */
+    transform: scale(1.04); 
     opacity: 1.0;
 }
 
+
+
+
 #title {
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px;
     color: white;
-   border-bottom: 1px solid ;
+    border-bottom: 1px solid;
 }
 
-h3{
+h3 {
     padding-top: 0;
 }
+
 .desc {
     padding: 10px;
 }
@@ -80,15 +93,15 @@ button {
     margin: 5px;
 }
 
-/* button:hover {
-    background: #FDA7DF;
+button:hover {
+    /* background: #FDA7DF; */
     color: white;
 }
 
 button a:hover {
-    background: #FDA7DF;
+    /* background: #FDA7DF; */
     color: white;
-} */
+}
 
 
 
@@ -130,12 +143,20 @@ a {
     color: rgb(7, 7, 7);
     text-decoration: none;
 }
+
 .gutters-sm {
     margin-right: -8px;
     margin-left: -8px;
 }
 
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
+.gutters-sm>.col,
+.gutters-sm>[class*=col-] {
     padding-right: 8px;
     padding-left: 8px;
+}
+
+.card-img {
+    width: 100%;
+    height: 400px; /* Adjust the height as needed */
+    object-fit: cover;
 }
