--- a/amigurumi-app/src/app/product/details-product/details-product.component.css
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.css
@@ -40,7 +40,7 @@ img {
     margin-top: 20px;
     margin-bottom: 10px;
     border-radius: 4px;
-    border: 1px solid rgb(248, 248, 248);
+    border: 1px ;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     /* opacity: 0.5; */
     /* transform: opacity 0.3s ease-in; */
