--- a/amigurumi-app/src/app/core/header/header.component.html
+++ b/amigurumi-app/src/app/core/header/header.component.html
@@ -54,10 +54,13 @@
         </ul>
     </nav> -->
 
-    <!-- <div class="img-wrap">
-        <img src="https://i.pinimg.com/564x/17/6e/24/176e24e7b955c7d2c60e48dbb529d15c.jpg" alt="Logo" class="logo">
-    </div> -->
+   
     <div class="logoWelcome">
+
+        <div class="img-wrap">
+            <img  routerLink="/" src="https://i.pinimg.com/564x/17/6e/24/176e24e7b955c7d2c60e48dbb529d15c.jpg" alt="Logo" class="logo">
+        </div>
+
         <div>
             <h4 class="logo-text">Handmade Amigurumi</h4>
         </div>
