--- a/amigurumi-app/src/styles.css
+++ b/amigurumi-app/src/styles.css
@@ -1,7 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 *Removes all default whitespace
-*/
+*
 
 * {
     padding: 0;
@@ -28,11 +28,23 @@ html {
 body, form, input, textarea, option, select, button {
     font: inherit;
 }
+/* body {
+    max-width: 1366px;
+    margin: auto;
+    position: relative;
+    min-height: 100vh;
+} */
+
+
 body{
-    background-image: url('https://i.pinimg.com/564x/0d/a6/24/0da624fd36b123a8d39e2466635883d1.jpg');
+    margin: auto;
+    position: relative;
+    min-height: 100vh;
+    /* max-width: 1366px; */
+    background-image: url('https://i.pinimg.com/564x/eb/bb/ee/ebbbee524816ce65a8520aa4bec81063.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: 30% 100%;
     /* background-image: linear-gradient(
     to bottom,
     rgba(231, 229, 231, 0.5),
@@ -112,12 +124,7 @@ blockquote p.author {
     text-align: right;
 }
 /* Global Styles */
-body {
-    max-width: 1366px;
-    margin: auto;
-    position: relative;
-    min-height: 100vh;
-}
+
 h2 {
     text-align: center;
     border-bottom: 1px dashed #999;
@@ -126,11 +133,11 @@ h2 {
 span {
     font-weight: bold;
 }
-
+/* 
 button {
     background-color: #4ebced;
     color: white;
-}
+} */
 
 button:hover {
     cursor: pointer;
