--- a/amigurumi-app/src/app/app.component.html
+++ b/amigurumi-app/src/app/app.component.html
@@ -1,7 +1,4 @@
-<app-header/>
-
-<router-outlet/>
-
+<app-header></app-header>
+<router-outlet></router-outlet>
 <!-- <app-main></app-main> -->
-
-<app-footer/>
+<app-footer></app-footer>
