--- a/amigurumi-app/src/app/user/register/register.component.html
+++ b/amigurumi-app/src/app/user/register/register.component.html
@@ -7,7 +7,8 @@
 				<small>Let us create your account</small>
 			</h2>
 		</div>
-		<form #registerForm="ngForm" class="card-form" (ngSubmit)="submitHandler(registerForm)">
+		<form #registerForm="ngForm" class="card-form" >
+		<!-- <form #registerForm="ngForm" class="card-form" (ngSubmit)="submitHandler(registerForm)"> -->
 			<div class="input">
 				<input type="text" id="fullName" name="fullName" class="input-field" required ngModel
 					#fullNameInput="ngModel" minlength="4" />
@@ -15,7 +16,7 @@
 				<label for="fullName" class="input-label"> <i class="fa-solid fa-user-large"></i> Full name</label>
 			</div>
 			<!--fullName error msg-->
-			<ng-container *ngIf="fullNameInput.touched">
+			<!-- <ng-container *ngIf="fullNameInput.touched">
 				<div class="error" *ngIf="fullNameInput.errors?.['required'] ">
 
 					Full name is required!
@@ -26,7 +27,7 @@
 					than
 					{{fullNameInput.errors?.['minlength'].requiredLength}} ...
 				</div>
-			</ng-container>
+			</ng-container> -->
 			<div class="input">
 				<input type="text" id="email" name="email" class="input-field" ngModel email required
 					#emailInput="ngModel" />
@@ -70,7 +71,7 @@
 				</div>
 			</ng-container>
 			
-			<div class="genderRadio">
+			<!-- <div class="genderRadio">
 				<div class="form-check">
 					<input class="form-check-input" type="radio" name="gender" id="male" value="male"
 						[(ngModel)]="user.gender">
@@ -86,11 +87,15 @@
 						Female
 					</label>
 				</div>
-			</div>
+			</div> -->
 
 			<div class="action">
 				<button class="action-button" [disabled]="registerForm.invalid"
-					[style]="{backgroundColor:registerForm.invalid ? '#f8d7da':' #6658d3'}">Submit</button>
+					[style]="{backgroundColor:registerForm.invalid ? '#f8d7da':' #6658d3'}"
+					(click)="register(fullNameInput.value,emailInput.value,passwordInput.value)"
+					
+					>Submit</button>
+					<!-- (click)="register(fullNameInput.value,emailInput.value,passwordInput.value,user.gender)" -->
 			</div>
 		</form>
 		<div class="card-info">
