update details, new-product and product-list

--- a/amigurumi-app/src/app/product-list/product-list.component.html
+++ b/amigurumi-app/src/app/product-list/product-list.component.html
@@ -46,8 +46,8 @@
                             </footer>
 
 
-                            <button> <a [routerLink]="product.id" class="btn btn-primary"> Details Page</a></button>
-
+                            <button> <a [routerLink]="product.id" class="btn btn-primary" > Details Page</a></button>
+                            <!-- [style]="{backgroundColor:'#6658d3'}" -->
                         </div>
                     </div>
 
