--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -28,7 +28,7 @@
                             account_circle
                         </span>
                         <span>
-                            {{product.author}}</span>
+                           zazazaza</span>
                     </div>
 
                     <div class="prd-skillLevel">
