--- a/amigurumi-app/src/app/product/new-product/new-product.component.html
+++ b/amigurumi-app/src/app/product/new-product/new-product.component.html
@@ -58,8 +58,8 @@
                                 <!-- Photo -->
                                 <div class="col-md-12">
                                     <label for="exampleInputPassword3" class="form-label">Photo</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword3"
-                                    name="photo" ngModel required
+                                    <input type="text" class="form-control" id="exampleInputPassword3"
+                                    name="imageUrl" ngModel required
                                         minlength="4" #photoInput="ngModel"
                                     >
                                 </div>
