update home. headers and footer

--- a/amigurumi-app/src/app/core/footer/footer.component.css
+++ b/amigurumi-app/src/app/core/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
     margin-top: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content:space-evenly;
     flex-wrap: wrap;
     padding: 10px;
     background: rgb(87, 88, 187);
