--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -16,22 +16,26 @@
             <div class="card-body">
               <div class="d-flex flex-column align-items-center text-center">
 
-                <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                <img  src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                class="rounded-circle p-1 bg-primary" width="180">
+
+                <!-- <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                   class="rounded-circle p-1 bg-primary" width="180">
                 <img *ngIf="!isMale" src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Admin"
-                  class="rounded-circle p-1 bg-primary" width="180">
+                  class="rounded-circle p-1 bg-primary" width="180"> -->
 
 
                 <div class="mt-3 ">
                   <!-- <h4>{{fullName}}'s profile</h4> -->
-                  <h4>{{ profileDetails.fullName }}'s profile</h4>
+                  <h4>{{ fullName  }}'s profile</h4>
+                  <!-- <h4>{{ profileDetails.fullName }}'s profile</h4> -->
                   <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{email}}</p> -->
                   <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{
-                    profileDetails.email }}</p>
+                   email }}</p>
 
                   <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{gender}}</p> -->
-                  <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{
-                    profileDetails.gender }}</p>
+                  <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> 
+                    Gender: {{gender}}</p> -->
 
                   <button class="btn btn-outline-primary" (click)="toggleEditMode()">Edit</button>
 
