--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -16,30 +16,30 @@
 
                 <div class="col-md-6 mb-md-0 p-md-4">
                     <div class="square-image-container">
-                        <img src="{{product.imageUrl}}" class="square-image" alt="...">
+                        <img src="{{product?.imageUrl}}" class="square-image" alt="...">
                         class="w-100"
                     </div>
                 </div>
                 <div class="col-md-6 p-4 ps-md-0">
-                    <h5 id="title">{{product.title}}</h5>
+                    <h5 id="title">{{product?.title}}</h5>
                     <div class="prd-author">
 
                         <span class="material-symbols-outlined">
                             account_circle
                         </span>
                         <span>
-                           zazazaza</span>
+                            {{product?.owner}}</span>
                     </div>
 
                     <div class="prd-skillLevel">
                         Skill Level:
                         <span class="material-symbols-outlined">
                             stars
-                        </span>{{product.skillLevel}}
+                        </span>{{product?.skillLevel}}
 
                     </div>
                     <div class="desc">
-                        <span class="card-text"> {{product.description}}</span>
+                        <span class="card-text"> {{product?.description}}</span>
                     </div>
                     <div class="settings" *ngIf="isLoggedIn">
 
