update login and register

--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -30,12 +30,14 @@
                         <span>
                             {{product?.owner}}</span>
                     </div>
-
                     <div class="prd-skillLevel">
-                        Skill Level:
-                        <span class="material-symbols-outlined">
-                            stars
-                        </span>{{product?.skillLevel}}
+                      
+                        <i class="fa-brands fa-galactic-republic"></i>  Category: {{product?.category}}
+
+                    </div>
+                    <div class="prd-skillLevel">
+                       
+                        <i class="fa-solid fa-star"></i>    Skill Level: {{product?.skillLevel}}
 
                     </div>
                     <div class="desc">
