update product-list, products, new-produxt

--- a/amigurumi-app/src/app/product/product.component.html
+++ b/amigurumi-app/src/app/product/product.component.html
@@ -10,7 +10,7 @@
         <span class="material-symbols-outlined">
             account_circle
         </span>
-        <span>{{product.author}}</span>
+        <span>{{product.ownerId}}</span>
 
     </div>
     <button *ngIf="showReadMoreBtn" (click)="readMore()">Read More</button>
