--- a/amigurumi-app/src/app/product/edit-product/edit-product.component.html
+++ b/amigurumi-app/src/app/product/edit-product/edit-product.component.html
@@ -197,7 +197,11 @@
 
                 </div>
             </form> <!-- Form END -->
-          
+            <div class="btn-back">
+                <a [routerLink]="['../../']" class="btn btn-outline-dark ">Back</a>
+              
+            </div>
+           
         </div>
     </div>
 </div>
