--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -2,22 +2,22 @@
   <div class="main-body">
 
     <div class="row gutters-sm">
-    
+
       <div class="my-5">
         <h3>My Profile</h3>
         <hr>
       </div>
       <div class="col-md-4 mb-3 ">
-        
- 
+
+
         <!-- READ ONLY MODE -->
         <ng-container *ngIf="!isEditMode">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <div class="card-body">
               <div class="d-flex flex-column align-items-center text-center">
 
-                <img  src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
-                class="rounded-circle p-1 bg-primary" width="180">
+                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                  class="rounded-circle p-1 bg-primary" width="180">
 
                 <!-- <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                   class="rounded-circle p-1 bg-primary" width="180">
@@ -27,11 +27,11 @@
 
                 <div class="mt-3 ">
                   <!-- <h4>{{fullName}}'s profile</h4> -->
-                  <h4>{{ fullName  }}'s profile</h4>
+                  <h4>{{ fullName }}'s profile</h4>
                   <!-- <h4>{{ profileDetails.fullName }}'s profile</h4> -->
                   <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{email}}</p> -->
                   <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{
-                   email }}</p>
+                    email }}</p>
 
                   <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{gender}}</p> -->
                   <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> 
@@ -148,8 +148,7 @@
 
                   <button type="button" class="btn btn-outline-primary" (click)="toggleEditMode()">Cancel</button>
                   <button type="button" class="btn btn-outline-primary" (click)="saveProfileHandler(form)"
-                    [disabled]="form.invalid"
-                    >Save changes</button>
+                    [disabled]="form.invalid">Save changes</button>
 
                 </div>
               </div>
@@ -159,7 +158,7 @@
 
       </div>
       <div class="col-md-8">
-    
+
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <section class="container pt-3 mb-3 ">
           <div class="row pt-5 mt-30">
@@ -175,18 +174,14 @@
                     exercitation ullamco laboris nisi ut aliquip.</p><span
                     class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
                       class="fe-icon-arrow-right"></i></span>
-                  <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-                      The current link item
+
+                  <div class="list-group" *ngIf="ownerProducts.length > 0">
+
+                    <a [routerLink]="['/products', product.id]" class="list-group-item list-group-item-action active" aria-current="true"
+                      *ngFor="let product of ownerProducts">
+                      {{ product.title }}
                     </a>
-                    <a href="#" class="list-group-item list-group-item-action">A second link item</a>
-                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
-                    <a class="list-group-item list-group-item-action disabled">A disabled link item</a><a href="#"
-                      class="list-group-item list-group-item-action">A second link item</a>
-                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
-                    <a class="list-group-item list-group-item-action disabled">A disabled link item</a>
+
                   </div>
                 </div>
               </a>
