--- a/amigurumi-app/src/app/user/profile/profile.component.css
+++ b/amigurumi-app/src/app/user/profile/profile.component.css
@@ -79,7 +79,7 @@ a.card {
     position: relative;
     border: 0;
     border-radius: 0;
-    background-color: #fff;
+    background-color: #ffffff;
     -webkit-box-shadow: 0 12px 20px 1px rgba(64,64,64,0.09);
     box-shadow: 0 12px 20px 1px rgba(64,64,64,0.09);
 }
@@ -94,7 +94,7 @@ a.card {
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: #ffffff;
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,0.125);
     border-radius: .25rem;
