--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -145,7 +145,7 @@
                                         <button type="button" class="btn btn-outline-secondary"
                                             data-bs-dismiss="modal">Close</button>
                                         <button type="button" class="btn btn-primary"
-                                            (click)="deleteProduct()">Yes</button>
+                                            (click)="deleteProduct()" data-bs-dismiss="modal">Yes</button>
                                     </div>
                                 </div>
                             </div>
